# MAXINE-VFX-SDK

./: CMakeLists.txt
samples/AigsEffectApp/: CMakeLists.txt
samples/BatchEffectApp/: CMakeLists.txt
samples/DenoiseEffectApp/: CMakeLists.txt
samples/UpscalePipelineApp/: CMakeLists.txt
samples/VideoEffectsApp/: CMakeLists.txt
